messaging_app/messaging_app/blue_deployment.yaml
# blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messaging-app
      version: blue
  template:
    metadata:
      labels:
        app: messaging-app
        version: blue
    spec:
      containers:
      - name: messaging-app
        image: flameloaded/messaging-app:1.0  # Current version
        command: ["./wait-for-it.sh"]
        args: ["messaging-db:3306", "--timeout=30", "--", "python", "manage.py", "runserver", "0.0.0.0:8000"]
        ports:
          - containerPort: 8000
