messaging_app/messaging_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging-app
  template:
    metadata:
      labels:
        app: messaging-app
    spec:
      containers:
      - name: messaging-app
        image: flameloaded/messaging-app:latest
        command: ["./wait-for-it.sh"]
        args: ["messaging-db:3306", "--timeout=30", "--", "python", "manage.py", "runserver", "0.0.0.0:8000"]
        ports:
          - containerPort: 8000
