messaging_app/messaging_app/green_deployment.yaml
# green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app-green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messaging-app
      version: green
  template:
    metadata:
      labels:
        app: messaging-app
        version: green
    spec:
      containers:
      - name: messaging-app
        image: flameloaded/messaging-app:2.0  # New version
        command: ["./wait-for-it.sh"]
        args: ["messaging-db:3306", "--timeout=30", "--", "python", "manage.py", "runserver", "0.0.0.0:8000"]
        ports:
          - containerPort: 8000
